fix: contrast of the footer
close #2

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,5 @@
 :root {
-  --text-color: #5c6873;        // Common not black text color
+  --text-color: #bababa;        // Common not black text color
   --primary-color: #991111;       // The primary red color
   --hover-color: #8b0000;         // Primary with hover
   --bg-color: #f7f7f7;            // Sections background
